[package]
name = "lwp"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = "3.0.0-beta.5"
tokio = { version = "1.14.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version="1.0.130", features = ["derive"]}
serde_json = "1.0.68"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.19"
clokwerk = "0.4.0-rc1"

